--- a/healthcare-next/package.json
+++ b/healthcare-next/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-phone-number-input": "^3.4.10",
     "shadcn-ui": "^0.9.4",
